--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
       <aside>
-        <img src="./Assets/images/P2.jpg" class="sample-img"></img>
+        <img src="./Assets/images/Me-P1.png" class="sample-img"></img>
       </aside>
 
       <section id="About-Me" class="about-text" >
