--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tyon Jackson Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./Assets/css/styles.css" >
+    <link rel="stylesheet" href="Assets/css/styles.css" >
   </head>
 
   <body>
