--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Tyon Jackson Portfolio</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="Assets/css/styles.css" >
+    <link rel="stylesheet" href="./Assets/css/styles.css" >
   </head>
 
   <body>
@@ -50,20 +50,20 @@
         <section class="flex-item-1">
           <a href="https://tysonjcode.github.io/Bootcamp-Challenge01/">
           <header>HTML/CSS Code Refractoring</header>
-          <img src="./assets/images/P2.jpg" alt="black camera" />
+          <img src="./Assets/images/P2.jpg" alt="black camera" />
           </a>
         </section>
         <section class="flex-item-2">
           <header>Project 2</header>
-          <img src="./assets/images/P3.jpg" alt="tablet held in hands" />
+          <img src="./Assets/images/P3.jpg" alt="tablet held in hands" />
         </section>
         <section class="flex-item-3">
           <header>Project 3</header>
-          <img src="./assets/images/P4.jpg" alt="rolls of toilet paper in a basket" />
+          <img src="./Assets/images/P4.jpg" alt="rolls of toilet paper in a basket" />
         </section>
         <section class="flex-item-4">
           <header>Project 4</header>
-          <img src="./assets/images/P3.jpg" alt="4 wooden spoons with different seasonings" />
+          <img src="./Assets/images/P3.jpg" alt="4 wooden spoons with different seasonings" />
         </section>
       </div>
     </article>
