--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
       <section id="About-Me" class="about-text" >
         <h2>About Me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-          At consectetur lorem donec massa sapien faucibus et molestie ac. Nec ullamcorper sit amet risus nullam eget felis eget nunc. 
-          Quis varius quam quisque id diam vel quam. Feugiat vivamus at augue eget arcu dictum varius duis. Sodales ut eu sem integer vitae justo eget. 
+          Hi, my name is Tyson Jackson and I'm a 28-year-old digital creator/ marketer. I am currently working in IT with CT Group full-time at the same time as I am furthering my skills and knowledge of coding by undergoing a new UWA coding boot camp course. I am looking to hopefully get a position in the same industry once I complete the boot camp to keep my skill and knowledge fresh in my mind, I previously worked in a team of two with my work partner and we run our own web designs, management, and digital advertising. Unfortunately, my work partner is taking some time away from the business due to recently acquired health concerns.
           <br></br>
-          Aliquam sem fringilla ut morbi. Massa sed elementum tempus egestas sed sed. Velit sed ullamcorper morbi tincidunt ornare massa eget egestas purus. 
-          Volutpat commodo sed egestas egestas. Amet porttitor eget dolor morbi non arcu risus quis. Ac turpis egestas sed tempus urna et. Sed faucibus turpis in eu. 
-          Volutpat commodo sed egestas egestas.
+          Due to this, I have taken this opportunity the go back to study and am looking to find a dream job using my skills in WordPress, Shopify, and overall digital management and advertising once I complete studying. I am experienced in a wide range of digital creation and marketing jobs and techniques. 2+ years of experience working with WordPress and Shopify designing and managing websites and leading the SEO, Google advertising, and Local SEO including GMB. I have worked with multiple successful websites where my main responsibilities consisted of on-page optimization including keyword optimization, title and description meta tag optimization, image alt tag optimization, creation of Woocommerce structure and design, and running and managing Google ads and functionality of the websites.
         </p>
       </section>
     </main>
