dinner party project added

--- a/index.html
+++ b/index.html
@@ -44,14 +44,16 @@
       <h2>My Work</h2>
       <div id="My-Work" class="flex-container">
         <section class="flex-item-1">
-          <a href="https://tysonjcode.github.io/Bootcamp-Challenge01/">
-          <header>HTML/CSS Code Refractoring</header>
-          <img src="./Assets/images/P2.jpg" alt="black camera" />
+          <a href="https://seanbutcher1994.github.io/The-Dinner-Party/index.html">
+          <header>Dinner Party Project 1</header>
+          <img src="./Assets/images/cover.png" alt="black camera" />
           </a>
         </section>
         <section class="flex-item-2">
-          <header>Project 2</header>
-          <img src="./Assets/images/P3.jpg" alt="tablet held in hands" />
+          <a href="https://tysonjcode.github.io/Bootcamp-Challenge01/">
+          <header>HTML/CSS Code Refractoring</header>
+          <img src="./Assets/images/P2.jpg" alt="tablet held in hands" />
+          </a>
         </section>
         <section class="flex-item-3">
           <header>Project 3</header>
